# ProjectAria

./: .env.example  .gitignore  ARCHITECTURE.md  ARIA_SHELLS_MERGE_PLAN.md  CHANGELOG.md  CLAUDE.md  FUTURE_INVESTIGATIONS.md  GETTING_STARTED.md  GLM-4.7-SETUP.md  IDEAS.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  REVIEW_SUMMARY.md  SETUP.md  SHELLS_DESIGN.md  SPECIFICATION.md  create-glm4-agent.sh  docker-compose.yml  setup-glm4-no-sudo.sh  start-aria-glm4-sudo.sh  start-aria-glm4.sh  start-docker-and-test.sh
api/: Dockerfile  requirements.txt
api/aria/: __init__.py  config.py  main.py
api/prompts/: autopilot_planning.md  awareness_analysis.md  dream_reflection.md  extraction.md  heartbeat.md  ooda_evaluation.md  (+7 more)
cli/: README.md  pyproject.toml  requirements.txt  setup.py
cli/aria_cli/: __init__.py  main.py  service.py  setup_wizard.py
embeddings/: Dockerfile  requirements.txt  server.py
ios/: .gitignore  CLAUDE.md  README.md  project.yml
llamacpp/: Dockerfile
mcp/: server.py
scripts/: aria-backup.sh  aria-shell-capture  aria-shell-register  aria-tmux-hook.conf  init-mongo.js  mongot-password  mongot.conf  setup.sh
stt/: Dockerfile  requirements.txt  server.py
tts/: Dockerfile  requirements.txt  server.py
tui/: go.mod  main.go
ui/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
widget/: index.html  package-lock.json  package.json  tsconfig.json
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs  main.rs
(+287 files in other folders)
