[project]
name = "aria-cli"
version = "0.2.0"
description = "ARIA CLI client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.scripts]
aria = "aria_cli.main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
